--- a/index.html
+++ b/index.html
@@ -5650,7 +5650,7 @@ async function handleFile(file) {
         progressText.textContent = 'Atualizando banco de dados...';
 
         // Processar e salvar dados
-        await processSpreadsheetData(jsonData);
+        const result = await processSpreadsheetData(jsonData);
 
         progressBar.style.width = '100%';
         progressText.textContent = 'Concluído!';
@@ -5662,7 +5662,7 @@ async function handleFile(file) {
             resultIcon.textContent = '✅';
             resultText.textContent = 'Planilha atualizada com sucesso!';
             resultText.style.color = '#4caf50';
-            resultDetails.textContent = `${jsonData.length} registros processados`;
+            resultDetails.textContent = result.message || `${jsonData.length} registros processados`;
 
             // Fechar modal após 3 segundos
             setTimeout(() => {
@@ -5673,7 +5673,7 @@ async function handleFile(file) {
 
                 showToast(
                     'Planilha atualizada!',
-                    `${jsonData.length} registros importados com sucesso`,
+                    result.message,
                     'success',
                     5000
                 );
@@ -5740,29 +5740,73 @@ async function processSpreadsheetData(jsonData) {
 
         // 3. Processar novos dados da planilha
         const newClients = [];
+        let processedCount = 0;
+        let skippedCount = 0;
 
         for (const row of jsonData) {
             // Adaptar conforme estrutura da sua planilha
-            // Assumindo colunas: QR Code, Nome, Telefone, Endereço, Latitude, Longitude
+            // Colunas esperadas: QR Code, Nome, Telefone, Endereço, Latitude, Longitude
 
-            const qrCode = row['QR Code'] || row['Código'] || row['codigo'] || '';
-            const address = row['Endereço'] || row['Endereco'] || row['address'] || '';
+            const qrCode = row['QR Code'] || row['Código'] || row['codigo'] || row['Codigo QR'] || '';
+            const name = row['Nome'] || row['Name'] || row['Cliente'] || row['nome'] || '';
+            const phone = row['Telefone'] || row['Phone'] || row['Fone'] || row['telefone'] || '';
+            const addressFromSheet = row['Endereço'] || row['Endereco'] || row['address'] || row['endereco'] || '';
 
-            // Buscar coordenadas no addressDatabase usando o QR code
-            const addressData = addressDatabase[qrCode];
+            // Tentar obter coordenadas diretamente da planilha
+            let latitude = row['Latitude'] || row['latitude'] || row['lat'] || null;
+            let longitude = row['Longitude'] || row['longitude'] || row['lng'] || row['lon'] || null;
 
-            if (addressData) {
-                const client = {
-                    name: row['Nome'] || row['Name'] || row['Cliente'] || 'Cliente sem nome',
-                    phone: row['Telefone'] || row['Phone'] || row['Fone'] || '',
-                    address: addressData.address || address,
-                    latitude: addressData.latitude,
-                    longitude: addressData.longitude,
-                    created_at: new Date().toISOString()
-                };
-
-                newClients.push(client);
+            // Se não tiver coordenadas na planilha, tentar buscar no addressDatabase
+            if ((!latitude || !longitude) && qrCode) {
+                const addressData = addressDatabase[qrCode];
+                if (addressData) {
+                    latitude = addressData.latitude;
+                    longitude = addressData.longitude;
+                }
             }
+
+            // Validar se temos dados mínimos
+            if (!qrCode && !name) {
+                skippedCount++;
+                continue; // Pular linha sem dados
+            }
+
+            if (!latitude || !longitude) {
+                console.warn(`Linha ignorada - sem coordenadas: ${name || qrCode}`);
+                skippedCount++;
+                continue;
+            }
+
+            // Montar endereço completo com QR code incluído
+            let fullAddress = '';
+            if (qrCode && addressFromSheet) {
+                fullAddress = `Código QR: ${qrCode}\n${addressFromSheet}`;
+            } else if (qrCode && addressDatabase[qrCode]) {
+                fullAddress = `Código QR: ${qrCode}\n${addressDatabase[qrCode].address}`;
+            } else if (addressFromSheet) {
+                fullAddress = addressFromSheet;
+            } else if (qrCode && addressDatabase[qrCode]) {
+                fullAddress = addressDatabase[qrCode].address;
+            }
+
+            const client = {
+                name: name || `Cliente ${qrCode}`,
+                phone: phone || '',
+                address: fullAddress,
+                latitude: parseFloat(latitude),
+                longitude: parseFloat(longitude),
+                created_at: new Date().toISOString()
+            };
+
+            newClients.push(client);
+            processedCount++;
+        }
+
+        console.log(`✅ Processados: ${processedCount} clientes`);
+        console.log(`⚠️ Ignorados: ${skippedCount} linhas`);
+
+        if (newClients.length === 0) {
+            throw new Error('Nenhum cliente válido encontrado na planilha. Verifique se as colunas estão corretas.');
         }
 
         // 4. Inserir novos clientes no banco
@@ -5774,7 +5818,15 @@ async function processSpreadsheetData(jsonData) {
             if (insertError) throw insertError;
         }
 
-        return newClients.length;
+        const message = `${processedCount} clientes salvos${skippedCount > 0 ? ` (${skippedCount} linhas ignoradas)` : ''}`;
+
+        return {
+            success: true,
+            count: newClients.length,
+            processed: processedCount,
+            skipped: skippedCount,
+            message: message
+        };
 
     } catch (error) {
         console.error('Erro ao processar dados da planilha:', error);
